// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gate runs multiple else actions 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "respond",
        "with": "hello",
      },
      Object {
        "type": "respond",
        "with": "hiya!",
      },
    ],
    Object {
      "stack": Array [
        "gate.else",
      ],
    },
  ],
]
`;

exports[`gate runs the else action when evaluating falsy 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "respond",
        "with": "hello",
      },
    ],
    Object {
      "stack": Array [
        "gate.else",
      ],
    },
  ],
]
`;
